fix text overlapping - #301

--- a/packages/website/src/layout/layout.css
+++ b/packages/website/src/layout/layout.css
@@ -10,5 +10,8 @@
     .filter-grayscale {
       filter: grayscale(100%);
     }
+    .hyphenate {
+      hyphens: auto;
+    }
   }
 }
